--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/inspectionProfiles/Project_Default.xml
 *.iws
 *.iml
 *.ipr
@@ -35,4 +37,7 @@ build/
 .vscode/
 
 ### Mac OS ###
-.DS_Store
+.DS_Store!/.idea/inspectionProfiles/Project_Default.xml
+!/.idea/inspectionProfiles/Project_Default.xml
+!/src/main/resources/store.dat
+
